# vpn-rating-watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  OPERATIONS.md  README.md  alembic.ini  pyproject.toml  railway.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  monitor.yml
alembic/: env.py
alembic/versions/: 20260329_0001_initial_tables.py  20260404_0002_sync_generated_chart_schema.py  20260404_0003_backfill_generated_chart_metadata_and_harden_constraints.py  20260409_0004_add_chart_theme_to_telegram_chat.py  20260424_0005_add_update_schedule_to_telegram_chat.py
examples/: history_import.csv  history_import_2026-03-24_26_28_29.csv
src/vpn_rating_watcher/: __init__.py  cli.py
src/vpn_rating_watcher/bot/: __init__.py  runner.py  service.py
src/vpn_rating_watcher/charts/: __init__.py  service.py
src/vpn_rating_watcher/core/: settings.py
src/vpn_rating_watcher/db/: base.py  models.py  persistence.py  session.py
src/vpn_rating_watcher/importers/: __init__.py  csv_backfill.py
src/vpn_rating_watcher/jobs/: daily_telegram_post.py  hourly_sync.py  placeholders.py
src/vpn_rating_watcher/scraper/: __init__.py  models.py  normalize.py  service.py
src/vpn_rating_watcher/web/: __init__.py  app.py  payload.py
src/vpn_rating_watcher/web/static/: site.webmanifest
tests/: test_bot_notification_settings.py  test_bot_runner.py  test_bot_service.py  test_bot_service_regression.py  test_chart_aggregation.py  test_chart_label_spacing.py  test_chart_smoothing.py  test_csv_backfill.py  test_daily_telegram_post.py  test_generated_chart_schema_guard.py  test_hourly_sync.py  test_hourly_sync_digest.py  test_persistence.py  test_scraper_ci_smoke.py  test_scraper_normalize.py  test_smoke.py  test_web_app.py  test_web_payload.py
